# dhbw_rapla-to-ics

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md
.github/: dependabot.yml
.github/workflows/: default_rust.yml  release-docker_rust.yml
src/: main.rs
