[package]
name = "dhbw_rapla-to-ics"
version = "0.1.0"
authors = ["Julian Groshaupt <mail@julian-groshaupt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.10", features = ["blocking"] }
ics = "0.5.5"
nanoid = "0.3.0"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.7.1"
openssl = {version = "0.10", features = ["vendored"]}

[dev-dependencies]
rusty-hook = "^0.11.1"