[package]
name = "dhbw_rapla-to-ics"
version = "1.0.0"
authors = ["Julian Groshaupt <mail@julian-groshaupt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
tokio = { version = "1.4", features = ["full"] }
reqwest = { version = "0.11.2", features = ["blocking"] }
ics = "0.5.5"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.10.0"
openssl = {version = "0.10", features = ["vendored"]}

[dev-dependencies]
rusty-hook = "^0.11.1"